@startuml
'https://plantuml.com/class-diagram

package javafx.application {
   class Application
}

package javafx.scene.control {
    class MenuBar
}

package javafx.scene.layout {
     class VBox
     class BorderPane
}

package App{
class AppLauncher {
   +{static} void main(String[] args)
   +void start(Stage primaryStage)
}

Application <|-- AppLauncher
MenuBar <|-- AppMenuBar
VBox <|-- MainFrame
BorderPane <|-- StatusPane

class AppMenuBar {
    +AppMenuBar()
}


class StatusPane{
  -Label statusLabel
  +void updateStatus(String text)
}

class CanvasState {

    - List<Render<? extends MovableDrawing>> renders

    + void addRenderFigures(Collection<Render<? extends MovableDrawing>> toAdd)
    + void deleteRenderFigures(Collection<Render<? extends MovableDrawing>> toRemove)
    + void moveToFront( List<Render<? extends MovableDrawing>> selectedList)
    + void moveToBack( List<Render<? extends MovableDrawing>> selectedList)
    + List<Render< ? extends MovableDrawing>> renderFigures()
}

class MainFrame {

    +MainFrame(CanvasState canvasState)
}

}
@enduml